fix: text alignment

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -89,6 +89,6 @@
   color: white;
 }
 
-.home-page-subheading {
+.main-content-page .home-page-subheading {
   text-align: left;
 }
